--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.12.12",
+    "@types/nodemailer": "^7.0.4",
     "@types/paypal__checkout-server-sdk": "^1.0.8",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
