--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
-    "studio": "prisma studio"
+    "postinstall": "prisma generate",
+    "studio": "dotenv -e .env.local -- prisma studio",
+    "db:push": "dotenv -e .env.local -- prisma db push",
+    "db:generate": "dotenv -e .env.local -- prisma generate",
+    "db:migrate": "dotenv -e .env.local -- prisma migrate dev"
   },
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
@@ -32,6 +36,7 @@
     "@types/paypal__checkout-server-sdk": "^1.0.8",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "dotenv-cli": "^11.0.0",
     "eslint": "^8.57.1",
     "eslint-config-next": "^14.2.33",
     "typescript": "^5.4.5"
